--- a/frontend/benchtop/package.json
+++ b/frontend/benchtop/package.json
@@ -2,24 +2,28 @@
   "name": "benchtop",
   "version": "0.1.0",
   "private": true,
+
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1"
   },
+
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
+
   "browserslist": {
     "production": [
       ">0.2%",
@@ -32,7 +36,15 @@
       "last 1 safari version"
     ]
   },
+
   "overrides": {
-    "ansi-regex": "^6.0.1"
+    "ansi-regex": "^6.0.1",
+    "nth-check": "^2.0.1",
+    "css-select": "^4.0.0",
+    "svgo": "^2.8.0",
+    "@svgr/plugin-svgo": "^6.0.0",
+    "@svgr/webpack": "^6.0.0",
+    "postcss": "^8.4.31",
+    "resolve-url-loader": "^5.0.0"
   }
 }
