--- a/backend/requirements_biology.txt
+++ b/backend/requirements_biology.txt
@@ -1,3 +1,4 @@
+alembic
 anndata
 biopython
 bioinfokit
@@ -19,8 +20,11 @@ pandas
 plotly
 plotly-express
 plotnine
+psycopg2-binary
+pydantic-settings
 pyproj
 pyyaml
+python-dotenv
 python-multipart
 rasterio
 scikit-learn
@@ -28,6 +32,7 @@ scipy
 seaborn
 scanpy
 statsmodels
+sqlalchemy
 uvicorn
 umap-learn
 xgboost
